...
                            isHovering0 = false;
                            showTooltip0 = false;
                          });
                          _timer1?.cancel();
                        },
                        child: _getSidebarItem(
                          Key('editor-sidebar-btn'),
                          isHovering0,
                          widget.selectedIndex == 0,
                          Icons.edit,
                        ),
                      ),
                    ),
...
